Read value classes being enabled, not Class#isValue existing
- Since JEP 401 became a preview feature of the mainline JDK, Class#isValue
  exists on every runtime and reports false unless --enable-preview is set.
  isValueClassEnabledRuntime reads a wrapper type instead.

- Balance the quoting in the value translator's exception messages